# DGraph

./: .gitignore  CMakeLists.txt
DGraph/data/: graph.py  ogbn_datasets.py
DGraph/distributed/: RankLocalOps.py
DGraph/distributed/csrc/: local_data_kernels.cuh  torch_local_bindings.cpp  torch_local_kernels.cu
DGraph/distributed/include/: macros.hpp
DGraph/distributed/nccl/: NCCLBackendEngine.py  _NCCLCommPlan.py  _nccl_cache.py  _torch_func_impl.py  alltoallv_impl.py
DGraph/utils/: TimingReport.py
experiments/Benchmarks/: README.md
experiments/GraphCast/: dataset.py  layers.py  model.py
experiments/GraphCast/data_utils/: graphcast_graph.py
experiments/OGB/: GCN.py  main.py  plot_timing_reports.py  utils.py
experiments/OGB-LSC/: CacheGenerator.py  README.md  RGAT.py  Trainer.py  config.py  distributed_layers.py  main.py  pyg_wrappers.py  setup_dataset_comms.py
experiments/OGB-LSC/lsc_datasets/: MAG240M_dataset.py  distributed_graph_dataset.py  synthetic_dataset.py
experiments/OGB-LSC/mag240m/: DGraph_MAG240M.py  README.md
experiments/OGB-LSC/synthetic/: synthetic_dataset.py
tests/: test_NCCLCommPlan.py  test_distributed_graph.py
